--- a/src/Home.html
+++ b/src/Home.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="home_style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+              <a href="#0">Home</a>
+            </li>
+            <li>
+                <a href="#0">About</a>
+            </li>
+            <li>
+                <a href="#0">Login</a>
+            </li>
+            <li>
+                <a href="#0">Search</a></li>
+            <li>
+        </ul>
+    </nav>
 </body>
 </html>
