Style and HTML Changes

--- a/src/Home.html
+++ b/src/Home.html
@@ -11,17 +11,11 @@
     <nav>
         <ul>
             <li>
-              <a href="#0">Home</a>
+                <a href="Login_page.html">Login</a>
             </li>
             <li>
-                <a href="#0">About</a>
+                <a href="Search_Page.html">Do a report</a>
             </li>
-            <li>
-                <a href="#0">Login</a>
-            </li>
-            <li>
-                <a href="#0">Search</a></li>
-            <li>
         </ul>
     </nav>
 </body>
