--- a/src/Search_Page.html
+++ b/src/Search_Page.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="search_page.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+              <a href="Home.html">Home</a>
+            </li>
+        </ul>
+    </nav>
     <div class="container">
         <input type="text" placeholder="Search...">
         <div class="search"></div>
-      </div>
+    </div>
 </body>
 </html>
